--- a/style.css
+++ b/style.css
@@ -5,11 +5,15 @@
     height: 100%;
 }
 
+.itemsNav{
+    text-align: center;
+}
+
 .suscribirse{
     padding-left: 8%;
     text-decoration: none;
     color: #DAC1EB;
-    font-size: 75%;
+    font-size: 175%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
 }
@@ -18,8 +22,14 @@
     padding-left: 8%;
     text-decoration: none;
     color: #DAC1EB;
-    font-size: 75%;
+    font-size: 175%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+}
+
+.dropdown-item{
+    color: #DAC1EB;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
 }
 
@@ -27,7 +37,7 @@
     padding-left: 8%;
     text-decoration: none;
     color: #DAC1EB;
-    font-size: 75%;
+    font-size: 175%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
 }
@@ -36,7 +46,7 @@
     padding-left: 8%;
     text-decoration: none;
     color: #DAC1EB;
-    font-size: 75%;
+    font-size: 175%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
 }
@@ -79,6 +89,20 @@
     margin-top: -1.2%;
     padding-bottom: 3%;
     margin-bottom: -2%;
+}
+
+.botonVerMas{
+    background-color: #FED0C7;
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+}
+
+.botonVerProductos{
+    background-color: #FED0C7;
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
 }
 
 .tab-pane{
@@ -344,6 +368,14 @@ footer{
 .botonEnviarEmail{
     background: white;
     color: #FEC8BC;
+    font-weight: bold;
+    border-radius: 20%;
+    border: 1px solid #CED4DA;
+}
+
+.botonEnviarEmail :hover{
+    background: #FEC8BC;
+    color: white;
     font-weight: bold;
     border-radius: 20%;
     border: 1px solid #CED4DA;
